--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -6,6 +6,7 @@
 <div class="page-width{% if cart == empty %} is-empty{% endif %}" id="main-cart-footer" data-id="{{ section.id }}">
   <div>
     <div class="cart__footer">
+      <h1>abc</h1>
       {%- if settings.show_cart_note -%}
         <cart-note class="cart__note field">
           <label for="Cart-note">{{ 'sections.cart.note' | t }}</label>
